Setting null to caption/tHead IDL attributes should not throw.

Implementations of these setters should do nothing if null is passed.

Also, this CL changes the first argument of EnsurePreInsertionValidity()
to |const Node&|. Binding layer ensures that it's not null.

Bug: 687116, 730412
Change-Id: I34f867458a07139c8e9f949b791ad1567a8f7de9
Reviewed-on: https://chromium-review.googlesource.com/527837
Commit-Queue: Kent Tamura <tkent@chromium.org>
Reviewed-by: Hayato Ito <hayato@chromium.org>
Cr-Commit-Position: refs/heads/master@{#478200}
Former-commit-id: 1b1d24823dbc613529ee4f21269aec33ae0dea2a